# CFDProject

./: .gitignore  CMakeLists.txt  README.md  cfd_apptainer.def  compile.sh  example.geo  hpc_job_script.sh  main  makefile  petscInit.cpp  requirements.txt
.github/workflows/: test.yml
geometry/: Aneurysm15.vtk  Case15.vtk  aneurysm.geo  backstep.geo  cyl.geo  example.geo  example.msh  lidcavity.geo
scripts/: main.py  plot.py  setup.py  solver.py  ui.py
scripts/bloodflow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: compute.cpp  compute.hpp  globalbuilder.cpp  globalbuilder.hpp  localbuilder.cpp  localbuilder.hpp  mesh.cpp  mesh.hpp  setup.cpp  setup.hpp  solver.cpp  solver.hpp
tests/: globalbuildertest.cpp  localbuildertest.cpp  meshtest.cpp  solvertest.cpp
